fix(ui): fix text overflow of autocomplete dropdowns

--- a/automad/src/client/admin/styles/components/dropdown.less
+++ b/automad/src/client/admin/styles/components/dropdown.less
@@ -108,6 +108,10 @@
 		}
 	}
 
+	&__items--autocomplete {
+		max-width: 100%;
+	}
+
 	&__items--autocomplete &__link {
 		&:not(.am-active):hover {
 			color: hsl(var(--am-clr-text));
